[package]
name = "luola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", features = ["extra_traits"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_System_Console"] }
